# zaciraci

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TRADING_SETUP.md  build.rs  clippy.toml  diesel.toml  fly-deploy.sh  fly.toml  plan.md  rust-toolchain.toml  test_finite.rs  修正理由.md
backend/: Cargo.toml
backend/src/: arbitrage.rs  jsonrpc.rs  main.rs  ollama.rs  persistence.rs  ref_finance.rs  rpc.rs  trade.rs  wallet.rs  web.rs
backend/src/arbitrage/: tests.rs
backend/src/jsonrpc/: endpoint_pool.rs  near_client.rs  near_compat_tests.rs  rpc.rs  sent_tx.rs
backend/src/jsonrpc/endpoint_pool/: tests.rs
backend/src/ollama/: chat.rs  generate.rs
backend/src/persistence/: connection_pool.rs  evaluation_period.rs  pool_info.rs  prediction_record.rs  schema.rs  token_rate.rs  trade_transaction.rs
backend/src/persistence/pool_info/: tests.rs
backend/src/persistence/token_rate/: tests.rs
backend/src/persistence/trade_transaction/: tests.rs
backend/src/ref_finance/: balances.rs  deposit.rs  errors.rs  history.rs  path.rs  pool_info.rs  storage.rs  swap.rs  token_account.rs  token_index.rs
backend/src/ref_finance/balances/: tests.rs
backend/src/ref_finance/path/: by_token.rs  cached_evaluate.rs  graph.rs  preview.rs
backend/src/trade/: algorithm.rs  execution.rs  harvest.rs  market_data.rs  predict.rs  prediction_accuracy.rs  recorder.rs  stats.rs  strategy.rs  swap.rs  token_cache.rs  trade.rs
backend/src/trade/algorithm/: momentum.rs  portfolio.rs  trend_following.rs
backend/src/trade/execution/: tests.rs
backend/src/trade/harvest/: tests.rs
backend/src/trade/market_data/: tests.rs
backend/src/trade/predict/: tests.rs
backend/src/trade/rate_stats/: tests.rs
backend/src/trade/stats/: arima.rs  tests.rs
backend/src/trade/swap/: tests.rs
backend/src/trade/token_cache/: tests.rs
backend/src/types/: gas_price.rs  micro_near.rs  milli_near.rs
backend/src/web/: basic.rs  ollama.rs  pools.rs  stats.rs  storage.rs
backend/src/web/pools/: sort.rs  tests.rs
cli_tokens/: Cargo.toml  test_kick_pull.sh  top_predict.sh
cli_tokens/docs/: README.md  cache_design.md  design.md  predict.md  prediction_validation.md  rules.md  simulate.md  zeroshot_prediction_flow.md
cli_tokens/history/wrap.near/: akaia.tkn.near.json
cli_tokens/src/: api.rs  commands.rs  lib.rs  main.rs  models.rs  tests.rs  utils.rs
cli_tokens/src/api/: backend.rs  chronos.rs
cli_tokens/src/commands/: chart.rs  history.rs  integration_tests.rs  predict.rs  report.rs  simulate.rs  top.rs  verify.rs
cli_tokens/src/commands/chart/: tests.rs
cli_tokens/src/commands/predict/: kick.rs  pull.rs
cli_tokens/src/commands/report/: comparison_chart_tests.rs  tests.rs
cli_tokens/src/commands/simulate/: algorithm_tests.rs  algorithms.rs  api_integration_tests.rs  core.rs  cost_fix_test.rs  data.rs  data_flow_debug.rs  metrics.rs  mod.rs  tests.rs  (+9 more)
cli_tokens/src/models/: history.rs  prediction.rs  task.rs  token.rs  verification.rs
cli_tokens/src/tests/: api.rs  environment.rs  integration.rs  predict_args.rs  unit.rs
cli_tokens/src/utils/: cache.rs  config.rs  file.rs  scaling.rs
cli_tokens/tokens/: akaia.tkn.near.json  babyblackdragon.tkn.near.json  neardog.tkn.near.json
cli_tokens/tokens/wrap.near/: akaia.tkn.near.json  neardog.tkn.near.json
common/: Cargo.toml
common/src/: algorithm.rs  api.rs  cache.rs  config.rs  error.rs  lib.rs  ollama.rs  pools.rs  prediction.rs  rpc.rs  stats.rs  types.rs  units.rs
common/src/algorithm/: indicators.rs  momentum.rs  portfolio.rs  prediction.rs  trend_following.rs  types.rs
common/src/api/: backend.rs  chronos.rs  traits.rs
common/src/types/: README.md  near_units.rs  token_account.rs  token_types.rs  yocto_near.rs
crates/arbitrage/: Cargo.toml
crates/arbitrage/src/: lib.rs  tests.rs
crates/backend/: Cargo.toml
crates/backend/src/: arbitrage.rs  jsonrpc.rs  logging.rs  main.rs  ollama.rs  trade.rs  web.rs
crates/blockchain/: Cargo.toml
crates/blockchain/src/: jsonrpc.rs  lib.rs  mock.rs  ref_finance.rs  test_utils.rs  wallet.rs
crates/common/: Cargo.toml
crates/common/src/: algorithm.rs  config.rs  lib.rs  memory.rs  stats.rs  types.rs
crates/dex/: Cargo.toml
crates/dex/src/: errors.rs  lib.rs  pool_info.rs  token_index.rs  token_pair.rs
crates/google_auth/: Cargo.toml
crates/google_auth/src/: authenticator.rs  jwks.rs  lib.rs  user_cache.rs  validator.rs
crates/logging/: Cargo.toml
crates/logging/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: authorized_users.rs  config_store.rs  connection_pool.rs  evaluation_period.rs  lib.rs  maintenance.rs  pool_info.rs  portfolio_holding.rs  prediction_record.rs  schema.rs  token_rate.rs  trade_transaction.rs
crates/simulate/: Cargo.toml
crates/simulate/docs/: verification_report_2026-03-25.md
crates/simulate/src/: cli.rs  engine.rs  main.rs  mock_client.rs  mock_wallet.rs  output.rs  portfolio_state.rs  prediction.rs  sweep.rs  verify.rs
crates/trade/: Cargo.toml
crates/trade/src/: cost.rs  execution.rs  harvest.rs  lib.rs  market_data.rs  predict.rs  prediction_accuracy.rs  recorder.rs  slippage.rs  snapshot.rs  strategy.rs  swap.rs  token_cache.rs  valuation.rs
crates/trade/tests/: prediction_perf_test.rs
crates/web/: Cargo.toml  ROADMAP.md  build.rs
crates/web/src/: lib.rs  services.rs
frontend/: Cargo.toml  index.html  styles.css  test_finite.rs
frontend/docs/: model_omission_behavior.md  ui_model_information_update.md
frontend/src/: api_underlying.rs  basic.rs  chart.rs  data_normalization.rs  errors.rs  image_upload.rs  main.rs  model_registry.rs  ollama.rs  pools.rs  predict.rs  prediction_config.rs  prediction_utils.rs  server_api.rs  services.rs  stats.rs  storage.rs  tokens.rs
frontend/src/chart/: plots.rs
frontend/src/chronos_api/: predict.rs
frontend/src/prediction_utils/: axis_verification.md  tests.rs  visual_tests.rs
frontend/src/server_api/: basic.rs  ollama.rs  pools.rs  stats.rs  storage.rs
frontend/src/services/: mod.rs
(+400 files in other folders)
