[package]
name = "zaciraci"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
axum = "0.8"
once_cell = "1.21"
async-once-cell = "0.5"
cron = "0.15"
chrono = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
num-rational = "0.4"
num-integer = "0.1"
diesel = { version = "2.2", features = ["postgres", "numeric", "chrono"] }
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.8"
slog-term = "2.9"
slog-json = "2.6"
slog-envlogger = "2.2"
near-gas = "0.3"
near-sdk = "5.9"
near-jsonrpc-client = "0.16"
near-jsonrpc-primitives = "0.29"
near-primitives = "0.29"
near-crypto = "0.29"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
petgraph = "0.7"
slipped10 = "0.4"
bip39 = { version = "2.1", features = ["rand"] }
bs58 = "0.5"
ed25519-dalek = { version = "2", default-features = false }
futures-util = "0.3"
rayon = "1.10"
rand = "0.9"
humantime = "2.2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tarpc = { version = "0.36", features = ["tokio1", "tokio1-rustls"] }

[dev-dependencies]
assertables = "9.5"
proptest = "1.6"
serial_test = "3.2"
tokio = { version = "1.0", features = ["full"] }
