[workspace]
members = [
    "backend",
    "frontend",
    "common",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
once_cell = "1.21"
async-once-cell = "0.5"
chrono = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
num-rational = "0.4"
num-integer = "0.1"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.8"
slog-term = "2.9"
slog-json = "2.6"
slog-envlogger = "2.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bs58 = "0.5"
futures-util = "0.3"
rayon = "1.10"
rand = "0.9"
humantime = "2.2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[workspace.lints.clippy]
# 基本的な警告をエラーとして扱う
warnings = "deny"

# pedantic lints を警告として表示（優先度を下げて個別設定を有効）
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# 特定のlintを明示的に許可
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# 開発依存関係はワークスペースレベルでは未対応のため削除
