[package]
name = "cli_tokens"
version = "0.1.0"
edition = "2021"
description = "CLI tool for volatility tokens analysis and prediction"
authors = ["Zaciraci Project"]
license = "MIT"

[[bin]]
name = "cli_tokens"
path = "src/main.rs"

[dependencies]
# ワークスペース内の依存関係
common = { path = "../common", package = "zaciraci-common" }

# CLI固有の依存関係
clap = { version = "4.0", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
reqwest = { workspace = true }
rand = "0.8"
plotters = "0.3"
bigdecimal = { workspace = true }

[dev-dependencies]
mockito = "1.0"
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.1"
