[package]
name = "zaciraci-common"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tarpc = { version = "0.35.0", features = ["tokio1", "serde-transport"] }
