[package]
name = "zaciraci-common"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tarpc = { workspace = true }
once_cell = { workspace = true }
