[package]
name = "zaciraci-frontend"
version = "1.0.0"
edition = "2024"

[dependencies]
zaciraci-common = { path = "../common" }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document", "Element", "HtmlElement", "Node", "Window", 
  "HtmlInputElement", "EventTarget", "Event", "MouseEvent",
  "Headers", "Request", "RequestInit", "RequestMode", "Response",
  "console"
]}
js-sys = "0.3"
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
gloo = "0.11"
gloo-net = "0.5"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures = "0.3"
tarpc = { workspace = true }
tokio-serde = { workspace = true }
