[package]
name = "zaciraci-frontend"
version = "1.0.0"
edition = "2024"

[dependencies]
bigdecimal = { workspace = true }
zaciraci-common = { path = "../common" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document", "Element", "HtmlElement", "Node", "Window", 
  "HtmlInputElement", "EventTarget", "Event", "MouseEvent",
  "Headers", "Request", "RequestInit", "RequestMode", "Response",
  "console"
]}
js-sys = "0.3"
dioxus = { version = "0.6", features = ["web"] }
dioxus-web = "0.6"
dioxus-logger = "0.6"
log = "0.4"
gloo = "0.11"
gloo-net = "0.6"
chrono = { workspace = true, features = ["serde", "wasmbind"] }
futures = "0.3"
once_cell = { workspace = true }
reqwest = { workspace = true }
dioxus-markdown = "0.0.1"
plotters = "0.3"
