[package]
name = "blockchain"
version.workspace = true
edition = "2024"

[dependencies]
common = { path = "../common" }
dex = { path = "../dex" }
logging = { path = "../logging" }
anyhow = { workspace = true }
tokio = { workspace = true }
async-once-cell = { workspace = true }
chrono = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
slog = { workspace = true }
near-gas = "0.3.4"
near-sdk = { version = "5.24", features = ["non-contract-usage"] }
near-jsonrpc-client = "0.20"
near-jsonrpc-primitives = "0.34"
near-primitives = "0.34"
near-crypto = "0.34"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
petgraph = "0.7"
slipped10 = "0.4"
bip39 = { version = "2.1", features = ["rand"] }
bs58 = { workspace = true }
ed25519-dalek = { version = "2", default-features = false }
futures-util = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }

[features]
mock = []

[dev-dependencies]
assertables = "9.5"
proptest = "1.6"
serial_test = "3.2"
tokio = { workspace = true, features = ["full"] }
mockito = "1.0"
