[package]
name = "common"
version.workspace = true
edition = "2024"

[dependencies]
bigdecimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["time"] }
async-trait = "0.1"
ndarray = { version = "0.15", features = ["serde"] }
num-traits = { workspace = true }
near-account-id = { workspace = true }
predictor = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
serial_test = "3.1"
