[package]
name = "common"
version.workspace = true
edition = "2024"

[dependencies]
bigdecimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
humantime = { workspace = true }
tokio = { workspace = true, features = ["time"] }
async-trait = "0.1"
nalgebra = { workspace = true }
ndarray = { version = "0.15", features = ["serde"] }
num-traits = { workspace = true }
near-account-id = { workspace = true }
predictor = { workspace = true }

[dev-dependencies]
serial_test = "3.1"
