[package]
name = "dex"
version.workspace = true
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
near-sdk = { version = "5.24", features = ["non-contract-usage"] }
bigdecimal = { workspace = true }
num-bigint = { workspace = true }
