[package]
name = "persistence"
version.workspace = true
edition = "2024"

[dependencies]
common = { path = "../common" }
dex = { path = "../dex" }
logging = { path = "../logging" }
anyhow = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
diesel = { version = "2.2", features = ["postgres", "numeric", "chrono", "serde_json"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
once_cell = { workspace = true }
futures = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
slog = { workspace = true }

[dev-dependencies]
near-sdk = { version = "5.24", features = ["non-contract-usage"] }
serial_test = "3.2"
tokio = { workspace = true, features = ["full"] }
