[package]
name = "persistence"
version.workspace = true
edition = "2024"

[dependencies]
common = { path = "../common" }
dex = { path = "../dex" }
logging = { path = "../logging" }
anyhow = { workspace = true }
cron = "0.15"
tokio = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
diesel = { version = "2.2", features = ["postgres", "numeric", "chrono", "serde_json"] }
deadpool-diesel = { version = "0.6", features = ["postgres"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
slog = { workspace = true }

[features]
mock = []
# Exposes raw fixture helpers (raw insert / delete / wipe) under
# `authorized_users::test_helpers` so downstream crates can seed the
# table from their own integration tests without taking a direct
# dependency on diesel and the schema.
test-helpers = []

[dev-dependencies]
futures = { workspace = true }
near-sdk = { version = "5.24", features = ["non-contract-usage"] }
serial_test = "3.2"
tokio = { workspace = true, features = ["full"] }
