[package]
name = "simulate"
version.workspace = true
edition.workspace = true

[[bin]]
name = "simulate"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
persistence = { path = "../persistence" }
trade = { path = "../trade" }
blockchain = { path = "../blockchain" }
logging = { path = "../logging" }
dex = { path = "../dex" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
chrono = { workspace = true }
bigdecimal = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
slog = { workspace = true }
near-account-id = { workspace = true }
near-primitives = "0.34"
near-crypto = "0.34"
near-sdk = { version = "5.24", features = ["non-contract-usage"] }

[dev-dependencies]
serial_test = "3.2"
