[package]
name = "web"
version.workspace = true
edition = "2024"

[dependencies]
common = { path = "../common" }
persistence = { path = "../persistence" }
logging = { path = "../logging" }

tonic = "0.14"
tonic-prost = "0.14"
tonic-web = "0.14"
prost = "0.14"
prost-types = "0.14"
chrono = { workspace = true }
tokio = { workspace = true }
slog = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serial_test = "3.2"
